--- a/changelog.txt
+++ b/changelog.txt
@@ -1,10 +1,24 @@
+v[1.2.1] 05-22-2020
+General Changes
+- added global variables api keys
+- added google static map api key
+- added openweathermap key
+- added weather module containing
+- changed discord application token to a variable
+
+New Commands
+- weather - gets the current weather of a city
+
+Fixes
+- changed client to self.client in cogs
+
+
 v[1.1.6] 05-21-2020
 
 General Changes
 - Restructured the entire code to be split in modules
 - Utilitiy functions are now under the 'utility' class in utils.py
 - Added new modules [devs.py, events.py, misc.py, moderation.py]
-
 
 New Commands
 - load - loads an extension containing cogs
